fixed frontend overflow issue

--- a/wwwroot/css/chat.css
+++ b/wwwroot/css/chat.css
@@ -10,6 +10,7 @@ p{
 body {
     height: 100vh;
     margin: 0;
+    overflow: hidden;
 }
 
 .your-message {
